# TradeBot

./: CMakeLists.txt  main  main.cpp
handler/: StockDataStorageInMemory.cpp  StockDataStorageInMemory.h  StockExchangeHandler.cpp  StockExchangeHandler.h
